# i2c-interface

./: CMakeLists.txt  main.cpp
adapters/: i2c-linux-adapter.cpp  i2c-linux-adapter.hpp
i2c-interface/: i2c-intf.hpp
